fix for no repeat on mobile cards

--- a/currentSite/style.css
+++ b/currentSite/style.css
@@ -193,6 +193,9 @@ a:visited {
   .bg-img-container::before {
     background-attachment: scroll;
   }
+  .card{
+    background-size: cover;
+  }
 }
 /* useful 
   border-color: blue;
